--- a/ProductRESTService/src/main/java/resources/application.properties
+++ b/ProductRESTService/src/main/java/resources/application.properties
@@ -1,1 +1,2 @@
 products.source.api.url=https://jl-nonprod-syst.apigee.net/v1/categories/600001506/products?key=2ALHCAAs6ikGRBoy6eTHA58RaG097Fma
+product.price.labels=Was,then,now,% off - now
