Modification after self review

--- a/ProductRESTService/src/main/java/resources/application.properties
+++ b/ProductRESTService/src/main/java/resources/application.properties
@@ -1,2 +1,10 @@
-products.source.api.url=https://jl-nonprod-syst.apigee.net/v1/categories/600001506/products?key=2ALHCAAs6ikGRBoy6eTHA58RaG097Fma
-product.price.labels=Was,then,now,% off - now
+
+products.category.source.api.base.url=https://jl-nonprod-syst.apigee.net
+products.category.api.key.value=2ALHCAAs6ikGRBoy6eTHA58RaG097Fma
+products.category.api.connection.timeout=5000
+products.category.api.read.timeout=25000
+
+
+textlabel.was.now=Was {0}, now {1}
+textlabel.was.then.now=Was {0}, then {1}, now {2}
+textlabel.percent.discount={0} off - now {1}
