--- a/ProductRESTService/.classpath
+++ b/ProductRESTService/.classpath
@@ -22,5 +22,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/okhttp-3.12.1.jar"/>
+	<classpathentry kind="lib" path="lib/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/retrofit-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/converter-gson-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
