Clean up & formatted files in project

--- a/ProductRESTService/src/main/java/resources/application.properties
+++ b/ProductRESTService/src/main/java/resources/application.properties
@@ -1,4 +1,4 @@
-
+#Properties for category search service
 products.category.source.api.base.url=https://jl-nonprod-syst.apigee.net
 products.category.api.key.value=2ALHCAAs6ikGRBoy6eTHA58RaG097Fma
 products.category.api.connection.timeout=5000
