--- a/ProductRESTService/src/main/java/resources/application.properties
+++ b/ProductRESTService/src/main/java/resources/application.properties
@@ -3,3 +3,11 @@ products.category.source.api.base.url=https://jl-nonprod-syst.apigee.net
 products.category.api.key.value=2ALHCAAs6ikGRBoy6eTHA58RaG097Fma
 products.category.api.connection.timeout=5000
 products.category.api.read.timeout=25000
+
+skiu.color.colorRGBMap.map={\
+							'BLACK': '000000', 'WHITE': 'FFFFFF', 'RED': 'FF0000', \
+							'LIME': '00FF00', 'BLUE': '0000FF', 'YELLOW': 'FFFF00', \
+							'CYAN': '00FFFF', 'MAGENTA': 'FF00FF', 'SILVER': 'C0C0C0',\
+							'GREY': '808080', 'MAROON': '800000', 'OLIVE': '808000',\
+							'GREEN': '008000', 'PURPLE': '800080', 'TEAL': '008080', 'NAVY': '000080'\
+							}
