--- a/ProductRESTService/pom.xml
+++ b/ProductRESTService/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
